# cmprsd

./: CNAME  Cargo.toml  DEADJOE  LICENSE  README.md
.github/workflows/: rust_benchmark.yml  rust_documentation.yml
benches/: huffman.rs
dev/bench/: data.js  index.html
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/cmprsd/: all.html  index.html  sidebar-items.js
doc/cmprsd/algorithm/: index.html
doc/cmprsd/algorithm/huffman/: enum.CompressionError.html  enum.Huffman.html  fn.build_huffman_tree.html  fn.bytes_to_direction.html  fn.combine_nodes.html  fn.compute_frequencies.html  fn.directions_to_string.html  fn.huffman_tree_to_map.html  index.html  sidebar-items.js  struct.CompressedData.html  struct.Frequency.html
doc/cmprsd/huffman/: enum.CompressionError.html  enum.Huffman.html  fn.build_huffman_tree.html  fn.bytes_to_direction.html  fn.combine_nodes.html  fn.compute_frequencies.html  fn.directions_to_string.html  fn.huffman_tree_to_map.html  index.html  struct.CompressedData.html  struct.Frequency.html
doc/cmprsd/util/: index.html  sidebar-items.js
doc/search.desc/cmprsd/: cmprsd-desc-0-.js
doc/src/cmprsd/: huffman.rs.html  lib.rs.html
ressources/text/: Du côté de chez Swann by Marcel Proust  あめりか物語 by Kafu Nagai
src/: bwt.rs  encoder.rs  huffman.rs  lib.rs  mtf.rs
src/algorithm/: huffman.rs  mod.rs
src/algorithm/util/: binary_tree.rs
src/util/: binary_tree.rs  frequency.rs  mod.rs
tests/: huffman_tests.rs  tests.rs
tests/algorithm/: bwt.rs  huffman.rs  mtf.rs
tests/algorithm/util/: binary_tree.rs
(+30 files in other folders)
