[package]
name = "cmprsd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
itertools = "0.14.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = "1.0.0"

[[bench]]
name = "huffman"
harness = false

[features]
remote-benchmarks = []
